--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="container">
           <h1 class="heading">Weather App</h1>
           <form>
-            <input type="text" placeholder="Search for a city" autofocus>
-            <button type="submit">SUBMIT</button>
+            <input id="query" type="text" placeholder="Search for a city" autofocus>
+            <button id="search" type="submit">SUBMIT</button>
             <span class="msg"></span>
           </form>
         </div>
