--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
           </form>
         </div>
       </section>
-      <section class="ajax-section">
-        <div class="container">
-          <ul class="cities"></ul>
-        </div>
+      <section class="ajax-section" style="display: none;">
       </section>
     <script src="js/index.js"></script>
 </body>
