Fix location feature bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
           <h1 class="heading">Weather App</h1>
           <form>
             <input id="query" type="text" placeholder="Search for a city" autofocus>
-            <button id="search" type="submit">SUBMIT</button>
+            <div class="buttons">
+              <button id="search" type="submit">SUBMIT</button>
+              <button id="position" type="submit">
+                <span class="material-symbols-outlined">
+                my_location
+                </span>
+              </button>
+            </div>
             <span class="msg"></span>
           </form>
         </div>
